--- a/index.html
+++ b/index.html
@@ -5,22 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>My Showcase Website</title>
+    <title>DahnA's Website!</title>
 </head>
 <!-- This is the main body of the website- ALL your content goes AFTER the <body> tag and before the </body> tag -->
 <body>
 
     <!-- The Hero Section -------------------------------------------------------------------------------------- -->
     <section class="hero">
-        <div class="hero-text">My Showcase Website</div>
+   
     </section>
 
-<!-- Topic one ------------------------------------------------------------------------------------------------- -->
+<!-- Home ------------------------------------------------------------------------------------------------- -->
     <!-- The First Topic Section -->
     <section class="topic">
         <!-- the topic title a big bar with text in it -->
         <div class="topic-title">
-            <h1>Image Editing</h1>
+            <h1>About Me</h1>
+        </div>
+        <!-- now a three column grid of images -->
+        <div class="topic-content">
+            <!-- one "card" which includes an image with a text below it -->
+            <div class="topic-card">
+                <img src="images/MyPersona.png" alt="image of a girl explaining while an apple flies toward her head.">
+                <h2 class="topic-card-text">My persona</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/ActualMe.jpg" alt="face of DahnA Paek smiling and doing the victory sign">
+                <h2 class="topic-card-text">Actual Me</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/Interests.png" alt="a collage consisting of a d20, a scroll and an illustration">
+                <h2 class="topic-card-text">My Interests</h2>
+            </div>
+        </div>
+    </section>
+<!-- End of topic one------------------------------------------------------------------------------------------ -->
+
+<!-- Image Creation ------------------------------------------------------------------------------------------------- -->
+    <!-- The First Topic Section -->
+    <section class="topic">
+        <!-- the topic title a big bar with text in it -->
+        <div class="topic-title">
+            <h1>Image Manipulation</h1>
         </div>
         <!-- now a three column grid of images -->
         <div class="topic-content">
