--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
         <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <img src="images/FirstGreenScreen.jpg" alt="an image of a dude standing in front of a burning building staring at the camera">
+                <h2 class="topic-card-text">My First Green Screen Edit</h2>
             </div>
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <img src="images/MeFloatingOnALake.jpg" alt="me dissasociating with life in a lake">
+                <h2 class="topic-card-text">My Own Green Screen Adventure</h2>
             </div>
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <img src="images/SquareVectorBackground.png" alt="three hills and a sunset vector">
+                <h2 class="topic-card-text">My Vector Background</h2>
             </div>
         </div>
     </section>
