--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
 <!-- Home ------------------------------------------------------------------------------------------------- -->
-    <!-- The First Topic Section -->
+    <!-- The Home -->
     <section class="topic">
         <!-- the topic title a big bar with text in it -->
         <div class="topic-title">
@@ -39,7 +39,7 @@
             </div>
         </div>
     </section>
-<!-- End of topic one------------------------------------------------------------------------------------------ -->
+<!-- End of home------------------------------------------------------------------------------------------ -->
 
 <!-- Image Creation ------------------------------------------------------------------------------------------------- -->
     <!-- The First Topic Section -->
