--- a/index.html
+++ b/index.html
@@ -67,6 +67,32 @@
     </section>
 <!-- End of topic one------------------------------------------------------------------------------------------ -->
 
+<!-- 3D Modeling ------------------------------------------------------------------------------------------------- -->
+    <!-- The Second Topic Section -->
+    <section class="topic">
+        <!-- the topic title a big bar with text in it -->
+        <div class="topic-title">
+            <h1>3D Modeling</h1>
+        </div>
+        <!-- now a three column grid of images -->
+        <div class="topic-content">
+            <!-- one "card" which includes an image with a text below it -->
+            <div class="topic-card">
+                <img src="images/Volcano.png" alt="3d model of a treasure chest">
+                <h2 class="topic-card-text">Treasure Chest 3D Model</h2>
+            </div>
+            <video width="512" height="512" controls>
+                <source src="images/movie0001-0060.mp4" type="video/mp4"> 
+                <h2 class="topic-card-text">My 3D Animation</h2>
+            </video> 
+            <div class="topic-card">
+                <img src="images/Volcano.png" alt="a 3D model of a volcano, trees and a lake">
+                <h2 class="topic-card-text">Volcano 3D Model</h2>
+            </div>
+        </div>
+    </section>
+<!-- End of topic two------------------------------------------------------------------------------------------ -->
+
 <!-- Copy and paste the section from above to make your next section -->
 
 
