--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <img src="images/Volcano.png" alt="3d model of a treasure chest">
+                <img src="images/TreasureChest.png" alt="3d model of a treasure chest">
                 <h2 class="topic-card-text">Treasure Chest 3D Model</h2>
             </div>
             <video width="512" height="512" controls>
