--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
     </section>
 <!-- End of topic two------------------------------------------------------------------------------------------ -->
 
+<!-- 3D Modeling ------------------------------------------------------------------------------------------------- -->
+    <!-- The Second Topic Section -->
+    <section class="topic">
+        <!-- the topic title a big bar with text in it -->
+        <div class="topic-title">
+            <h1>Game</h1>
+        </div>
+        <!-- now a three column grid of images -->
+        <div class="topic-content">
+            <!-- one "card" which includes an image with a text below it -->
+            <div class="topic-card">
+                <iframe frameborder="0" src="https://itch.io/embed-upload/14656725?color=333333" allowfullscreen="" width="1280" height="740"><a href="https://24231.itch.io/platform-game-with-flower">Play Platform Game with Flower on itch.io</a></iframe>
+                <h2 class="topic-card-text">My Platform Game</h2>
+            </div>
+        </div>
+    </section>
+<!-- End of topic two------------------------------------------------------------------------------------------ -->
+
 <!-- Copy and paste the section from above to make your next section -->
 
 
