--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
     <section class="topic">
         <!-- the topic title a big bar with text in it -->
         <div class="topic-title">
-            <h1>Game</h1>
+            <h1>Game Design</h1>
         </div>
         <!-- now a three column grid of images -->
         <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <iframe frameborder="0" src="https://itch.io/embed-upload/14656725?color=333333" allowfullscreen="" width="1280" height="740"><a href="https://24231.itch.io/platform-game-with-flower">Play Platform Game with Flower on itch.io</a></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed-upload/14760950?color=333333" allowfullscreen="" width="1280" height="740"><a href="https://soa-lim.itch.io/platform-game-with-flower">Play Flower Jump on itch.io</a></iframe>
                 <h2 class="topic-card-text">My Platform Game</h2>
             </div>
         </div>
